force-app/main/default/objects/TumixAttendance__c/TumixAttendance__c.object-meta.xml
<CustomObject>
    <label>TUMIX出勤実績</label>
    <nameField>
        <displayFormat>ATT-{00000000}</displayFormat>
        <label>出勤実績管理名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>