force-app/main/default/objects/TumixAttendance__c/fields/CarNumber__c.field-meta.xml
<CustomField>
    <fullName>CarNumber__c</fullName>
    <label>車番</label>
    <length>255</length>
    <type>Text</type>
</CustomField>