force-app/main/default/objects/TumixAttendance__c/fields/ClockInTime__c.field-meta.xml
<CustomField>
    <fullName>ClockInTime__c</fullName>
    <label>出勤時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>