force-app/main/default/objects/TumixAttendance__c/fields/ClockOutTime__c.field-meta.xml
<CustomField>
    <fullName>ClockOutTime__c</fullName>
    <label>退勤時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>