force-app/main/default/objects/TumixAttendance__c/fields/DejitakoManualClockIn__c.field-meta.xml
<CustomField>
    <fullName>DejitakoManualClockIn__c</fullName>
    <label>打刻出勤(デジタコ)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>