force-app/main/default/objects/TumixAttendance__c/fields/DejitakoManualClockOut__c.field-meta.xml
<CustomField>
    <fullName>DejitakoManualClockOut__c</fullName>
    <label>打刻退勤(デジタコ)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>