force-app/main/default/objects/TumixAttendance__c/fields/EmploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>EmploymentStatus__c</fullName>
    <label>就業</label>
    <length>255</length>
    <type>Text</type>
</CustomField>