force-app/main/default/objects/TumixAttendance__c/fields/ManualClockIn__c.field-meta.xml
<CustomField>
    <fullName>ManualClockIn__c</fullName>
    <label>打刻出勤（出社退社）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>