force-app/main/default/objects/TumixAttendance__c/fields/ManualClockOut__c.field-meta.xml
<CustomField>
    <fullName>ManualClockOut__c</fullName>
    <label>打刻退勤（出社退社）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>