force-app/main/default/objects/TumixAttendance__c/fields/RestTime__c.field-meta.xml
<CustomField>
    <fullName>RestTime__c</fullName>
    <label>休憩時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>