force-app/main/default/objects/TumixAttendance__c/fields/WorkDay__c.field-meta.xml
<CustomField>
    <fullName>WorkDay__c</fullName>
    <label>勤務日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>