force-app/main/default/objects/TumixAttendance__c/fields/WorkEndDate__c.field-meta.xml
<CustomField>
    <fullName>WorkEndDate__c</fullName>
    <label>退勤日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>