force-app/main/default/objects/TumixAttendance__c/fields/WorkStartDate__c.field-meta.xml
<CustomField>
    <fullName>WorkStartDate__c</fullName>
    <label>出勤日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>