force-app/main/default/objects/TumixAttendance__c/fields/WorkStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkStatus__c</fullName>
    <label>勤務</label>
    <length>255</length>
    <type>Text</type>
</CustomField>