force-app/main/default/objects/TumixAttendance__c/fields/WorkTime__c.field-meta.xml
<CustomField>
    <fullName>WorkTime__c</fullName>
    <label>労働時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>